# wavexis

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  _add_docs.py  _check_docs.py  _fix_stubs.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  serve-test.yml
browsix/: __init__.py  __main__.py  auth.py  config.py  exceptions.py  init.py  multi.py  output.py  plugins.py  record.py  serve.py
browsix/actions/: __init__.py  accessibility.py  animation.py  base.py  bluetooth.py  browser.py  cast.py  console.py  cookies.py  crawl.py  css.py  debug.py  dialog.py  dom.py  dom_snapshot.py  download.py  emulation.py  eval.py  extract.py  form.py  har.py  headers.py  input.py  lighthouse.py  media.py  multi.py  navigate.py  network.py  overlay.py  pdf.py  performance.py  permissions.py  record.py  scrape.py  screencast.py  screenshot.py  security.py  service_worker.py  session.py  storage.py  (+5 more)
browsix/backend/: __init__.py  base.py  bidi.py  cdp.py  manager.py
browsix/cli/: __init__.py  app.py
docs/: backends.md  commands.md  contributing.md  index.md  install.md  multi.md  quickstart.md  raw.md  spike-notes.md  troubleshooting.md
docs/api/: actions.md  backends.md  cli.md  config.md  exceptions.md  multi.md  plugins.md  serve.md
docs/cookbook/: auth.md  ci-cd.md  cloud-browsers.md  css.md  debug.md  record-replay.md  scraping.md  screenshots.md  serve-mode.md
docs/guide/: assert.md  backends.md  commands.md  init.md  installation.md  multi.md  perf.md  plugins.md  quickstart.md  raw.md  repl.md  troubleshooting.md
stubs/bidiwave/: __init__.pyi
stubs/cdpwave/: __init__.pyi
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_a11y.py  test_animation.py  test_backend_selection.py  test_browser.py  test_console.py  test_css.py  test_debug.py  test_dialog.py  test_dom.py  test_dom_snapshot.py  test_emulation.py  test_emulation_advanced.py  test_eval.py  test_har.py  test_input.py  test_media.py  test_multi.py  test_navigate.py  test_network.py  test_network_advanced.py  test_overlay.py  test_pdf.py  test_perf.py  test_permissions.py  test_raw.py  test_record.py  test_scrape.py  test_screenshot.py  test_security.py  test_serve.py  test_service_worker.py  test_storage.py  test_tabs.py  test_webaudio.py  test_webauthn.py
tests/unit/: __init__.py  test_abstract_backend_phase5.py  test_action_cache.py  test_action_validations.py  test_actions.py  test_actions_coverage.py  test_actions_phase5.py  test_animation_action.py  test_annotated_screenshot.py  test_assert_multi.py  test_auth.py  test_auto_wait.py  test_backend_manager.py  test_backend_trace.py  test_bidi_backend.py  test_bidi_method_bodies.py  test_bidi_method_bodies_extras.py  test_bidi_phase5.py  test_bluetooth_action.py  test_cast_action.py  test_cdp_method_bodies.py  test_cleanup.py  test_cli_coverage.py  test_cli_execution.py  test_cli_phase5.py  test_concurrent_tabs.py  test_config.py  test_config_phase5.py  test_cookies_headers_actions.py  test_coverage_gaps.py  test_css_action.py  test_debug_action.py  test_debug_cli_regression.py  test_dom_snapshot_action.py  test_download_screencast.py  test_emulation_action.py  test_error_handling.py  test_exceptions.py  test_format_record.py  test_global_options.py  (+34 more)
wavexis/: __init__.py  __main__.py  auth.py  cleanup.py  config.py  exceptions.py  init.py  multi.py  output.py  plugins.py  record.py  repl.py  serve.py
wavexis/actions/: __init__.py  accessibility.py  animation.py  axe_audit.py  base.py  bluetooth.py  browser.py  cache.py  cast.py  combined_trace.py  console.py  cookies.py  core_web_vitals.py  crawl.py  css.py  debug.py  dialog.py  dom.py  dom_snapshot.py  download.py  emulation.py  eval.py  extract.py  form.py  har.py  har_replay.py  headers.py  input.py  lighthouse.py  media.py  modify_request.py  multi.py  navigate.py  network.py  overlay.py  pdf.py  performance.py  permissions.py  record.py  scrape.py  (+14 more)
wavexis/backend/: __init__.py  _trace.py  base.py  bidi.py  cdp.py  manager.py
wavexis/backend/mixins/: __init__.py  accessibility.py  animation.py  console.py  crash_report_context.py  css.py  debug.py  device_access.py  device_orientation.py  dialog.py  digital_credentials.py  dom.py  dom_debugger.py  dom_snapshot.py  emulation.py  event_breakpoints.py  events.py  experimental.py  extensions.py  fed_cm.py  fetch.py  headless_experimental.py  heap_profiler.py  indexed_db.py  input.py  input_domain.py  io.py  navigation.py  network.py  network_domain.py  overlay.py  page.py  performance.py  pwa.py  runtime.py  screenshot.py  service_worker.py  smart_card_emulation.py  storage.py  target.py
wavexis/cli/: __init__.py  _advanced.py  _capture.py  _config.py  _debug.py  _emulation.py  _experimental.py  _iframe.py  _input.py  _navigation.py  _network.py  _network_inspect.py  _nl.py  _perf.py  _serve.py  _session.py  _shadow.py  _shared.py  _workflow.py  app.py
