[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavexis"
version = "2.12.0"
description = "Browser automation CLI — wraps cdpwave and bidiwave, no Node.js, no Chromium download"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Mathias Paulenko", email = "mathias.paulenko@outlook.com" }]
keywords = ["cli", "browser", "automation", "cdp", "bidi", "screenshot", "scraping", "chromium"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12,<1.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
cdp = ["cdpwave>=3.2.1,<4.0"]
bidi = ["bidiwave>=1.8.1,<2.0"]
rich = ["rich>=13.0,<14.0"]
serve = ["aiohttp>=3.9,<4.0"]
image = ["Pillow>=10.0,<11.0"]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-aiohttp>=1.0,<2.0",
    "pytest-cov>=4.0,<5.0",
    "pytest-timeout>=2.3,<3.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "build>=1.2,<2.0",
    "types-PyYAML>=6.0,<7.0",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings[python]>=1.0,<2.0",
]

[project.scripts]
wavexis = "wavexis.cli:main"

[project.entry-points."wavexis.plugins"]
# Third-party plugins register here, e.g.:
# my-action = "my_plugin:action_plugin"
# my-backend = "my_plugin:MyBackend"
# my-middleware = "my_plugin:make_middleware"

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/wavexis"
Repository = "https://github.com/MathiasPaulenko/wavexis"
Issues = "https://github.com/MathiasPaulenko/wavexis/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["stubs"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["ASYNC109"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests with mocks",
    "integration: tests against a real Chrome browser",
    "slow: tests that take more than 5 seconds",
    "chrome: tests that require Chrome specifically",
]

[tool.coverage.run]

[tool.hatch.build.targets.wheel]
packages = ["wavexis"]
