[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavexis"
version = "2.16.15"
description = "Browser automation CLI — wraps cdpwave and bidiwave, no Node.js, no Chromium download"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Mathias Paulenko", email = "mathias.paulenko@outlook.com" }]
keywords = ["cli", "browser", "automation", "cdp", "bidi", "screenshot", "scraping", "chromium"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12,<1.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
cdp = ["cdpwave>=3.2.1,<4.0"]
bidi = ["bidiwave>=1.8.1,<2.0"]
rich = ["rich>=13.0,<14.0"]
serve = ["aiohttp>=3.9,<4.0"]
image = ["Pillow>=10.0,<13.0"]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-aiohttp>=1.0,<2.0",
    "pytest-cov>=4.0,<5.0",
    "pytest-timeout>=2.3,<3.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "build>=1.2,<2.0",
    "types-PyYAML>=6.0,<7.0",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings[python]>=1.0,<2.0",
]

[project.scripts]
wavexis = "wavexis.cli:main"

[project.entry-points."wavexis.plugins"]
# Third-party plugins register here, e.g.:
# my-action = "my_plugin:action_plugin"
# my-backend = "my_plugin:MyBackend"
# my-middleware = "my_plugin:make_middleware"

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/wavexis"
Repository = "https://github.com/MathiasPaulenko/wavexis"
Issues = "https://github.com/MathiasPaulenko/wavexis/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["stubs"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["ASYNC109"]

[tool.ruff.lint.per-file-ignores]
"wavexis/backend/bidi.py" = ["E501", "F811"]
"wavexis/backend/cdp.py" = ["E501", "F811"]
"wavexis/cli/_debug.py" = ["E501", "F811"]
"tests/unit/test_cdp_method_bodies.py" = ["E501", "F811"]
"tests/unit/test_bidi_backend.py" = ["E501", "F811"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cdpwave.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bidiwave.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wavexis.backend.cdp"
disable_error_code = ["no-redef", "no-any-return", "return-value"]

[[tool.mypy.overrides]]
module = "wavexis.backend.bidi"
disable_error_code = ["no-redef", "no-any-return", "return-value"]

[[tool.mypy.overrides]]
module = "wavexis.cli._debug"
disable_error_code = ["no-redef", "misc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:'asyncio.get_event_loop_policy' is deprecated:DeprecationWarning",
    "ignore:'asyncio.set_event_loop_policy' is deprecated:DeprecationWarning",
]
markers = [
    "unit: fast isolated tests with mocks",
    "integration: tests against a real Chrome browser",
    "slow: tests that take more than 5 seconds",
    "chrome: tests that require Chrome specifically",
    "e2e: end-to-end CLI tests against a real browser",
]

[tool.coverage.run]
# No omissions: cdp, bidi and debug CLI are part of the public surface and
# must be measured. Total coverage is ~72 %; we raise the threshold as it improves.

[tool.codespell]
skip = "ref,.venv*,.venv-dev,.venv-prod-test,.git,*.png,*.pdf,*.jpg,*.jpeg,*.svg,*.lock,*.json,*.js,*.txt,*.out"
ignore-words-list = "medias"

[tool.hatch.build.targets.wheel]
packages = ["wavexis"]
